// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TBallGiftbase
message TBallGiftbase
{	
	
	
	repeated TBallGiftDefine TBallGift = 1; // TBallGift

}

// Defined in table: TBallGift
message TBallGiftDefine
{	
	
	
	optional uint32 Id = 1; // ID
	
	
	optional string Name = 2; // 名字
	
	
	optional uint32 Num = 3; // 数量
	
	
	optional uint32 ItemId = 4; // 道具id
	
	
	optional string Path = 5; // 路径
	
	
	optional int32 Pro = 6; // 概率万分比
	
	
	optional int32 PushBag = 7; // 1进包裹2加金币
	
	
	optional string Info = 8; 
	
	
	optional int32 Cost = 9; // 价值

}

