package msg;
import "serialize.proto";
message C2GW_StartTiger
{
    //optional uint32 type = 1;       //参加消耗 1 1000金 2 2000金 3 3000金
	optional uint32 cost = 1;		//下注钱数
	optional string token = 2; 		//token
}

message GW2C_GameResult
{
    //repeated uint32 nums = 1;       //3个数字
	optional uint32 ret = 1;  		//开启新一轮的返回结果 0成功
}

message GW2C_SumGet
{
    optional uint32 num = 1;        //累计总获得
}

//-------------------翻牌begin----------------

//同步本轮已经翻开的卡牌状态
message GW2C_NotifyCardState
{
	repeated CardData card = 1;
	optional uint32 cost = 2;
}

//请求翻牌 pos 位置
message C2GW_ReqTakeCard
{
	optional uint32 pos = 1;
}

//返回翻牌结果 
message GW2C_AckTakeCardRet
{
	optional uint32 num = 1;	//数字 
	optional uint32 pos = 2;	//位置
}

//-------------------翻牌end------------------


//用元宝 兑换钻石
message C2GW_ReqExChangeToDiamond
{
	optional uint32 count = 1; //请求兑换钻石的数量 暂时用不上 现在是一次换掉 身上能换的所有元宝
	optional string token = 2; //token
}

//兑换钻石 结果返回
message GW2C_AckExChangeToDiamondRet
{
	optional uint32 ret = 1;		//对换结果
	optional uint32 diamond = 2;	//获得钻石数量
}
